Добавление кодогенерации через openapi.yaml, добавили команду make gen, и произвел рефакторинг наших ручек
